--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-ui-router": "^1.0.6",
+    "angular-jwt": "^0.1.9",
+    "angular-resource": "^1.6.6"
   }
 }
